--- a/bubble-wrap.yaml
+++ b/bubble-wrap.yaml
@@ -2762,21 +2762,25 @@ layers:
         # building footprints, pre-extrusion
         footprints:
             filter:
-                $zoom: { max: 18 }
-#                any:
-#                    # show footprints for buildings at least one zoom level before they will be extruded
-#                    - { $zoom: [13], area: { min: 50000 } }
-#                    - { $zoom: [13], height: { min: 250 } }
-#                    - { $zoom: [13], volume: { min: 200000 } }
-#                    - { $zoom: [14], area: { min: 5000 } }
-#                    - { $zoom: [14], height: { min: 190 } }
-#                    - { $zoom: [14], volume: { min: 150000 } }
-#                    - { $zoom: [15], height: { min: 100 } }
-#                    - { $zoom: [15], area: { min: 500 } }
-#                    - { $zoom: [15], volume: { min: 100000 } }
-#                    - { $zoom: [16], area: { min: 100 } }
-#                    - { $zoom: [16], volume: { min: 50000 } }
-#                    - { $zoom: { min: 17 }, area: true }
+                all:
+                    $zoom: { max: 18 }
+                any:
+                    # show footprints for buildings at least one zoom level before they will be extruded
+                    - { $zoom: [13], area: { min: 50000 } }
+                    - { $zoom: [13], height: { min: 250 } }
+                    - { $zoom: [13], volume: { min: 200000 } }
+                    #- { $zoom: [13], not: { scale_rank: [0,1,2] } }
+                    #- { $zoom: [14], not: { scale_rank: [0,1,2,3] } }
+                    - { $zoom: [14], area: { min: 5000 } }
+                    - { $zoom: [14], height: { min: 190 } }
+                    - { $zoom: [14], volume: { min: 150000 } }
+                    - { $zoom: [15], height: { min: 100 } }
+                    - { $zoom: [15], area: { min: 500 } }
+                    - { $zoom: [15], volume: { min: 100000 } }
+                    - { $zoom: [16], area: { min: 100 } }
+                    - { $zoom: [16], volume: { min: 50000 } }
+                    #- { $zoom: { min: 16 }, area: true }
+                    - { $zoom: { min: 17 }, area: true }
             draw:
                 polygons: { visible: true }
                 lines: { visible: true }
@@ -2788,13 +2792,25 @@ layers:
 #                    #visible: false
 #                    color: [[13,[0.7,0.7,0.7,0.5]],[17,[0.65, 0.65, 0.65]]]
 #                    width: [[13, 0.3px], [15, 0.4px], [16,0.7px], [18, 1.25px]]
-        z_early:
-            filter: { $zoom: 13, not: { scale_rank: [0,1,2] } }
-            draw:
-                polygons:
-                    visible: false
-                lines:
-                    visible: false
+#            early-z13:
+#                filter: { $zoom: 13, not: { scale_rank: [0,1,2] } }
+#                draw:
+#                    polygons:
+#                        visible: false
+#                    lines:
+#                        visible: false
+#            early-z14:
+#                filter: { $zoom: 14, not: { scale_rank: [0,1,2,3] } }
+#                draw:
+#                    polygons:
+#                        visible: false
+#                    lines:
+#                        visible: false
+#            early-z15:
+#                filter: { $zoom: 15, scale_rank: [5,6] }
+#                draw:
+#                    lines:
+#                        color: red
 
 
         # 3d buildings
